# strided-rs-benchmark-suite

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Manifest.toml  Project.toml  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/einsum_benchmarks/: README.md
benchmarks/einsum_benchmarks/step408/: README.md  step408_bench.jl  step408_bench.rs
benchmarks/einsum_benchmarks/tn_light_415_late_step/: README.md  tn_light_415_late_step.jl  tn_light_415_late_step.rs  tn_light_415_late_step_fair.jl  tn_light_415_late_step_investigate.jl
benchmarks/strided_benchmarks/: README.md
benchmarks/strided_benchmarks/fused_elementwise/: README.md  fused_elementwise.rs
benchmarks/strided_benchmarks/permute/: README.md  hptt_compare.cpp  patterns.json  permute.jl  permute.rs  run_hptt_compare.sh
benchmarks/strided_benchmarks/transpose_scale/: README.md  scale_transpose.rs
data/instances/: tensornetwork_permutation_optimized.json
docs/: environment-setup.md
docs/plans/: 2026-02-19-sorted-output-labels-design.md
micro_bench/: README.md  run_hptt_compare.sh  scale_transpose.rs  step408_bench.jl  step408_bench.rs  step408_fair.jl  step408_investigate.jl
scripts/: convert_tensornetwork.py  format_results.py  generate_dataset.py  run_all.sh
src/: main.jl  main.rs
