[project]
name = "strided-rs-benchmark-suite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einsum-benchmark>=0.1.7",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]
